# nicehash-api-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_8md.html  README_8md_source.html  algorithmNameToId_8cpp.html  algorithmNameToId_8cpp__incl.map  algorithmNameToId_8cpp__incl.md5  algorithmNameToId_8cpp_a1e1200c519d86807a4ed778251575b04_icgraph.map  algorithmNameToId_8cpp_a1e1200c519d86807a4ed778251575b04_icgraph.md5  algorithmNameToId_8cpp_source.html  annotated.html  appveyor.yml  classClient-members.html  classClient.html  classClient__coll__graph.md5  classClient_a3603f0196f11c9a675ed9812487d5a63_cgraph.map  classClient_a3603f0196f11c9a675ed9812487d5a63_cgraph.md5  classClient_a3603f0196f11c9a675ed9812487d5a63_icgraph.map  classClient_a3603f0196f11c9a675ed9812487d5a63_icgraph.md5  classNiceHashApi-members.html  classNiceHashApi.html  classNiceHashApi__coll__graph.map  classNiceHashApi__coll__graph.md5  classNiceHashApi_a080715e168207776178ae7d7e1da6893_cgraph.map  classNiceHashApi_a080715e168207776178ae7d7e1da6893_cgraph.md5  classNiceHashApi_a080715e168207776178ae7d7e1da6893_icgraph.map  classNiceHashApi_a080715e168207776178ae7d7e1da6893_icgraph.md5  classNiceHashApi_a230aa00b8f54f908765665ba3d42dedc_cgraph.map  classNiceHashApi_a230aa00b8f54f908765665ba3d42dedc_cgraph.md5  classNiceHashApi_a351c8c49d65aa3bfec9f791fab61d0dc_cgraph.map  classNiceHashApi_a351c8c49d65aa3bfec9f791fab61d0dc_cgraph.md5  classNiceHashApi_a351c8c49d65aa3bfec9f791fab61d0dc_icgraph.map  classNiceHashApi_a351c8c49d65aa3bfec9f791fab61d0dc_icgraph.md5  classNiceHashApi_a484c9564d7e6bfbdb11660d14d52a2c0_cgraph.map  classNiceHashApi_a484c9564d7e6bfbdb11660d14d52a2c0_cgraph.md5  classNiceHashApi_a9e62eb21a0ee5927760b4b69c600b0af_cgraph.map  classNiceHashApi_a9e62eb21a0ee5927760b4b69c600b0af_cgraph.md5  classNiceHashApi_aa991c34b2d2b66c6d2fbd390e34cf58c_cgraph.map  (+85 more)
cmake/: curlpp.external
doc/: Doxyfile.in
examples/0_global_stats/: CMakeLists.txt  main.cpp
examples/1_algorithm_by_name_or_id/: CMakeLists.txt  main.cpp
include/: client.hpp  nicehash-api.hpp
include/client/: client.hpp  get.hpp
src/client/: get.cpp
src/nicehash-api/: algorithmNameToId.cpp  getApiVersion.cpp  getAverageGlobalStats.cpp  getCurrentGlobalStats.cpp  getDetailedProviderStats.cpp  getOrdersByAlgorithm.cpp  getProviderStats.cpp  getProviderWorkerStats.cpp  throwExceptionIfAlgorithmInvalid.cpp  throwExceptionIfLocationInvalid.cpp
test/: nicehash-api.test.cpp  setup.hpp
test/mocks/: client.mock.hpp
test/nicehash-api/: getApiVersion.test.cpp  getAverageGlobalStats.test.cpp  getCurrentGlobalStats.cpp  getCurrentGlobalStats.test.cpp  getDetailedProviderStats.test.cpp  getOrdersByAlgorithm.test.cpp  getProviderStats.test.cpp  getProviderWorkerStats.test.cpp
